In order to achieve sub-pixel precision, use float instead of int